Sat May 16 17:47:55 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb, test/rss/test_version.rb (RSS::VERSION):
	0.2.5 -> 0.2.6.

Sat May 16 17:26:04 2009  Narihiro Nakamura  <authorNari@gmail.com>

	* iseq.c (rb_iseq_clone): use longlife object and insert write barrier.

	* vm_insnhelper.c (vm_cref_push): ditto.

	* vm_insnhelper.h (COPY_CREF): insert write barrier.

Sat May 16 13:49:24 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_autoload_load): gets rid of false warning.
	  [ruby-core:23466]

Sat May 16 10:59:54 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* sample/drb/dhasenc.rb: add magic comment for encoding.

	* sample/mine.rb: ditto.

	* ext/tk/sample/tcltklib/sample1.rb: ditto.

Sat May 16 09:49:05 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (magic_comment_encoding): ignores unused emacs-style
	  encoding comment, as like Vim styles.  [ruby-core:23470]

Sat May 16 09:30:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defs/keywords (reserved_word): made inline function static.
	  [ruby-core:23210]

	* parse.y (rb_reserved_word): ordinary function for ripper.

Sat May 16 09:19:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (magic_comment_encoding): use rb_compile_warning() to
	  show the currently parsing file name.  [ruby-core:23469]

Sat May 16 09:03:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ruby_version): now version.h includes
	  include/ruby/version.h, so need to tell to cpp to see
	  $(srcdir)/include.  [ruby-core:23468]

Fri May 15 17:35:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_shift, rb_ary_shift_m): clears unused elements.
	  [ruby-dev:38448]

Fri May 15 15:15:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_autoload_load): checks if iv_tbl is valid.
	  [ruby-dev:38456]

Fri May 15 11:17:48 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/setup.mak (-version-): now version.h includes