@@ -1,3 +1,8 @@
+Sat May 16 17:51:11 2009  Kouhei Sutou  <kou@cozmixng.org>
+
+	* sample/rss/rss_recent.rb, sample/rss/list_description.rb: use
+	UTF-8.
+
 Sat May 16 17:47:55 2009  Kouhei Sutou  <kou@cozmixng.org>
 
 	* lib/rss/rss.rb, test/rss/test_version.rb (RSS::VERSION):
